--- a/ProjectTemplate/addimage.html
+++ b/ProjectTemplate/addimage.html
@@ -272,7 +272,9 @@
                 <br>
             </p>
             <button type="submit" value="submit" class="save-btn">Save</button>
-            <button onclick="location.href = 'profile.html'">Return to Profile</button>
+            <button onclick="location.href = 'profile.html'" class="save-btn">Return to Profile</button>
+            <button onclick="location.href = 'HomePage.html'" class="save-btn">Return to Home</button>
+
         </form>
     </div>
 
