--- a/ProjectTemplate/profile.html
+++ b/ProjectTemplate/profile.html
@@ -80,7 +80,7 @@
         <div class="photo-left">
           <img class="photo" src="https://image.noelshack.com/fichiers/2017/38/2/1505775062-1505606859-portrait-1961529-960-720.jpg"/>
         </div>
-        <h4 class="name">session</h4>
+        <h4 class="name">Jane Doe</h4>
         
         <p class="info" id="name">jane.doe@gmail.com</p>
         <div class="stats row">
